# tuio_c

./: .gitmodules  CMakeLists.txt  readme.md
src/tuio1_c/src/: my_tuio_client.cpp  my_tuio_client.h  tuio_c.c  tuio_c.h  tuio_client.h  tuio_udp_receiver.cpp
src/tuio1_c/test/: tuio1_c_test.c
src/tuio2_c/src/: my_tuio_client.cpp  my_tuio_client.h  tuio_c.c  tuio_client.c  tuio_udp_receiver.cpp  tuio_udp_receiver.h
work/: tuio_c.sublime-workspace
work/tuio1/tuio1.xcodeproj/: project.pbxproj
work/tuio1/tuio1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/tuio1/tuio1_c.xcodeproj/: project.pbxproj
work/tuio1/tuio_c-ios.xcodeproj/: project.pbxproj
work/tuio1_c.xcodeproj/: project.pbxproj
work/tuio1_c.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
work/tuio2/tuio2.xcodeproj/: project.pbxproj
work/tuio2/tuio2_c.xcodeproj/: project.pbxproj
work/tuio2/tuio_c-ios.xcodeproj/: project.pbxproj
work/tuio2_c.xcodeproj/: project.pbxproj
work/tuio_c-ios.xcodeproj/: project.pbxproj
